updating the index... still total crap, also adding the gauge example page

--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <link rel="stylesheet" type="text/css" href="css/grid.css" />
   </head>
   <body class="container">
-    <div class="wide-9 push-3 col-1">
-      <div>
-        <p>Trying to get a feel for how this stuff works.</p>
+    <h1>A simple page discussing and using some of my projects.</h1>
+    <div class="wide-9 push-3">
+      <div class="col-1">
+        <div>Trying to get a feel for how this stuff works.</div>
       </div>
     </div>
     <div class="wide-3 pull-9 col-1">
-      <div>
-        <p>This would be my sidebar.</p>
+      <div id="about">
+        <h2>Developer Profile:</h2>
+        <ul>
+          <li>Name: Kris Vanderwater</li>
+          <li>Occupation: Drupal mostly</li>
+          <li>Employer: Commerce Guys</li>
+        </ul>
+      </div>
+      <div id="non-github-projects">
+        <h2>Non-github Projects:</h2>
+        <ul>
+          <li>Administration Deck</li>
+          <li>Contextual Administration</li>
+          <li>Page Manager Pathauto</li>
+          <li>Path Profiler</li>
+          <li>RIAT</li>
+        </ul>
       </div>
     </div>
   </body>
