Adding ids to the main content and sidebar divs

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   </head>
   <body class="container">
     <h1>A simple page discussing and using some of my projects.</h1>
-    <div class="wide-9 push-3">
+    <div id="main-content" class="wide-9 push-3">
       <div class="col-1">
         <div>Trying to get a feel for how this stuff works.</div>
       </div>
     </div>
-    <div class="wide-3 pull-9 col-1">
+    <div id="sidebar-first" class="wide-3 pull-9 col-1">
       <div id="about">
         <h2>Developer Profile:</h2>
         <ul>
