--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>eclipsegc.github.com</title>
     <link rel="stylesheet" type="text/css" href="css/grid.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
   <body class="container">
     <h1>A simple page discussing and using some of my projects.</h1>
