--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body class="container">
     <div id="main-content" class="wide-9 push-3">
       <div class="col-1">
-        <h1>Kris Vanderwater</h1>
+        <h1>Title</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ultrices elit sit amet sem ullamcorper vitae porttitor quam vestibulum. Donec sodales nulla vitae sapien porta eu bibendum mauris sodales. Vivamus imperdiet congue purus et condimentum. In dictum purus felis. Cras neque quam, luctus et pretium sed, ornare ut ipsum. Aliquam nisi elit, commodo at fringilla ac, eleifend in justo. Ut convallis turpis eu nisl semper aliquet a quis enim. Sed suscipit dui non purus egestas condimentum. Integer sodales ultrices vestibulum. Pellentesque sagittis gravida vestibulum. Nam in mauris pretium diam sagittis ullamcorper nec et sem. Nam ut quam diam, sit amet bibendum ligula.</p>
 
         <p>Nam accumsan gravida leo, sit amet laoreet velit tincidunt vel. Sed in enim eget nisl mattis dictum sed a elit. Sed tincidunt bibendum imperdiet. Mauris convallis mi ac justo consectetur eu congue neque cursus. Ut accumsan lobortis quam non venenatis. Phasellus congue consectetur enim. Aliquam eu urna sit amet lacus aliquet feugiat eu quis neque. Sed nisi eros, ultrices non dictum ut, pharetra id sapien. In adipiscing tempus euismod. Nulla nec elit id leo facilisis varius in et nibh. Nullam tincidunt imperdiet nisi at semper. Maecenas arcu odio, tempor et cursus eget, fermentum eu nisl. Nam vestibulum porttitor turpis, at interdum odio imperdiet id.</p>
